--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-git+https://github.com/pyrogram/pyrogram.git@asyncio-dev
+
 tgcrypto
 
-asyncio
+
 aiohttp
 
 beautifulsoup4
@@ -25,3 +25,39 @@ google-api-python-client
 google-auth-httplib2
 google-auth-oauthlib
 oauth2client
+
+git+https://github.com/pyrogram/pyrogram.git@asyncio-dev
+aiofiles
+aiohttp
+bs4
+cowpy
+dnspython
+emoji
+gitpython
+
+googletrans
+hachoir==3.1.1
+heroku3
+motor
+nest_asyncio
+oauth2client
+Pillow
+psutil
+pybase64
+pySmartDL
+python-dotenv
+pytz
+rarfile
+removebg
+requests
+search-engine-parser
+selenium==3.141.0
+setuptools>=40.3.0
+
+speedtest-cli
+telegraph
+tgcrypto
+urbandict==0.5
+wget
+wikipedia
+youtube_dl
