--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,16 @@
-
-
-
-
-aiohttp
-
-beautifulsoup4
-emoji
-
-
-heroku3
-
-hachoir
-Pillow
-
-psycopg2-binary
-sqlalchemy
-
-youtube-dl
-aria2p
-
-pySmartDL
-
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-oauth2client
-
 git+https://github.com/pyrogram/pyrogram.git@asyncio-dev
 aiofiles
-
+aiohttp
 bs4
 cowpy
 dnspython
 emoji
 gitpython
-
+google-api-python-client
+google-auth-httplib2
+google-auth-oauthlib
 googletrans
-
+hachoir==3.1.1
 heroku3
 motor
 nest_asyncio
@@ -53,7 +27,7 @@ requests
 search-engine-parser
 selenium==3.141.0
 setuptools>=40.3.0
-
+spamwatch
 speedtest-cli
 telegraph
 tgcrypto
